--- a/bckup/database.yml
+++ b/bckup/database.yml
@@ -1,3 +1,13 @@
+production:
+        adapter: mysql2
+        encoding: utf8
+        reconnect: false
+        database: mycampaigns_production
+        pool: 5
+        username: root
+        password: root
+        socket: /var/run/mysqld/mysqld.sock
+
 development:
         adapter: mysql2
         encoding: utf8
